k8s/social_network_server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: social-network-app-server-svc
spec:
  type: ClusterIP
  ports:
  - name: social-network-app-server-port                                                 
    port: 5000         # target port                                                            
    targetPort: 5000    # container port 
  # - name: social-network-app-server-https-port                                                 
  #   port: 443          # target port                                                            
  #   targetPort: 5001    # container port 
  selector:
    app: social-network-app-server
