k8s/social_network_server/ingress.yml
apiVersion: networking.k8s.io/v1                                                
kind: Ingress                                                                   
metadata:                                                                       
  name: social-network-app-server-ingress                                                
  annotations:                                                                  
    kuberentes.io/ingress.class: "nginx"                                        
    kubernetes.io/tls-acme: "true"                                              
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:                                                                           
  tls:                                                                          
    - hosts: # Make sure that the domain name does not already exist                                            
        - "social-network-application-server.dyn.cloud.e-infra.cz"
      # secretName is the same as domain name, but "." are replaced by "-" 
      secretName: social-network-application-server-dyn-cloud-e-infra-cz-tls                                 
  rules:                                                                        
  - host: "social-network-application-server.dyn.cloud.e-infra.cz"                                          
    http:                                                                       
      paths:                                                                    
      - path: /
        backend:                                                                
          service:                                                              
            name: social-network-app-server-svc                                          
            port:                                                               
              number: 443
        pathType: ImplementationSpecific
